org_unpackaged/unpackaged/objects/State_Tax_Rate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cap__c</fullName>
        <label>Cap</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>State Tax Rate</label>
</CustomObject>